feat(json): introduce modular JsonEngine abstraction and ByteBuf serialization